tests/sksl/errors/ReservedNameFvec3.glsl
### Compilation failed:

error: 1: 'fvec3' is a reserved word
1 error
